--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
     "version": 2,
-    "framework": null,
-    "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.6.0" }
-    },
+    "builds": [
+      { "src": "Dockerfile", "use": "@vercel/docker" }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
+      { "src": "/(.*)", "dest": "/public/index.php" }
     ],
     "env": {
         "APP_ENV": "production",
